# SofaMsg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
android/: GRADLE_WRAPPER_README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sofamsg/app/: MainActivity.kt  SofaMsgApp.kt
android/app/src/main/java/com/sofamsg/app/core/: SofaMsgCoreManager.kt
android/app/src/main/java/com/sofamsg/app/ui/: ChatScreen.kt  ConversationListScreen.kt  PinEntryScreen.kt  ScanQrScreen.kt  SettingsScreen.kt
android/app/src/main/java/com/sofamsg/app/ui/theme/: Theme.kt
android/app/src/main/java/uniffi/sofamsg/: sofamsg.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  themes.xml
app/: app.js  index.css  index.html
core/: .gitignore  Cargo.toml  build.rs
core/docs/: VAULT_THREAT_MODEL.md
core/src/: decoy.rs  identity.rs  invite.rs  keys.rs  lib.rs  storage.rs  vault.rs
core/src/e2e/: mod.rs  ratchet.rs  session.rs  x3dh.rs
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs  sofamsg.udl
p2p/: Cargo.toml
p2p/src/: doorbell.rs  lib.rs  messaging.rs  node.rs  protocol.rs  queue.rs
