[package]
name = "silentbell_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
argon2 = "0.5"
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
bs58 = "0.5"
rusqlite = { version = "0.31", features = ["sqlcipher"] }

# Layer 0: E2E message encryption (X3DH + Double Ratchet)
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = { version = "4", features = ["digest"] }
hkdf = "0.12"
hmac = "0.12"
aes-gcm = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
